--- a/app/assets/stylesheets/admin/shared/page.css.scss
+++ b/app/assets/stylesheets/admin/shared/page.css.scss
@@ -2,11 +2,13 @@ form {margin:0;}
 .modal{width:700px;}
 .footer {font-size: 80%;}
 .strong {font-weight: bold;}
+.larger {font-size: 120%;}
 section {padding-top:10px;}
 #hide_contents {}
 .hotline {background-color:lightyellow;
   td{background-color:lightyellow !important;}
 }
+.clear {clear:both;}
 div.border-div {
 border: 1px solid #ddd;
 -webkit-border-radius: 6px;
