--- a/app/assets/stylesheets/admin/vars.css.scss
+++ b/app/assets/stylesheets/admin/vars.css.scss
@@ -8,4 +8,6 @@ $ptn_6: #104577;
 $default_border_color: $ptn_4;
 $default_background_color: $ptn_2;
 $default_header_color: $ptn_3;
+$high_light_color: #ffffe0;
+
 
