--- a/app/views/travel_admin/emails/index.html.erb
+++ b/app/views/travel_admin/emails/index.html.erb
@@ -19,12 +19,11 @@
 <table class="data-list table table-bordered table-striped" id="list_emails">
   <thead>
     <tr class='table-header'>
-      <th>id</th>
-      <th>email</th>
-      <th>data type</th>
-      <th>data id</th>
-      <th>created_at</th>
-      <th>updated_at</th>
+      <th>ID</th>
+      <th>Email</th>
+      <th>Ref Data</th>
+      <th>Created_at</th>
+      <th>Updated_at</th>
       <th>op</th>
     </tr>
   </thead>
