--- a/app/views/travel_admin/schedule_assignments/_seats.html.erb
+++ b/app/views/travel_admin/schedule_assignments/_seats.html.erb
@@ -22,11 +22,12 @@
     <div class='span5' style='float:right;'>
       <table class='seat-table-intro'>
         <tbody><tr class="diagram-exp">
-            <td nowrap="nowrap" align="center" class="edit_en">圖示:</td>
-            <td nowrap="nowrap" align="center" class="edit_en"><div class="block blnk">&nbsp;</div> Avilible</td>
-            <td nowrap="nowrap" align="center" class="edit_en"><div class="block hold">&nbsp;</div> Hold</td>
-            <td nowrap="nowrap" align="center" class="edit_en"><div class="block sold">&nbsp;</div> Sold</td>
-            <td nowrap="nowrap" align="center" class="edit_en"><div class="block fpaid">&nbsp;</div> Full Paid </td>
+            <td nowrap="nowrap" align="center" ><strong>圖示:</strong></td>
+            <td nowrap="nowrap" align="center" ><div class="block blnk">&nbsp;</div> Avilible</td>
+            <td nowrap="nowrap" align="center"><div class="block hold">&nbsp;</div> Hold</td>
+            <td nowrap="nowrap" align="center"><div class="block sold">&nbsp;</div> Sold</td>
+            <td nowrap="nowrap" align="center"><div class="block fpaid">&nbsp;</div> Full Paid </td>
+            <td nowrap="nowrap" align="center"><div class="block agent">&nbsp;</div> Agent order </td>
           </tr>
       </tbody></table>
     </div>
