--- a/app/views/travel_admin/schedules/_orders.html.erb
+++ b/app/views/travel_admin/schedules/_orders.html.erb
@@ -1,4 +1,4 @@
-<table class="data-list table table-bordered table-striped" id="list_schedule_orders">
+<table class="data-list table table-bordered table-striped table-condensed" id="list_schedule_orders">
   <thead>
     <tr class='table-header'>
       <th>Order#</th>
