--- a/app/views/travel_admin/schedules/_row.html.erb
+++ b/app/views/travel_admin/schedules/_row.html.erb
@@ -1,17 +1,20 @@
 <tr id="<%= dom_id row %>" >
-    <td style="font-weight:bold;text-align:center;text-decoration:underline;"><%= link_to row.id, schedule_path(row) %></td>
+    <td class='cell-middle large-number'><%= link_to row.id, schedule_path(row) %></td>
     <td><span class="tour-name"><%= row.tour.description.title_cn %></span><br /><%= row.tour.description.title %></td>
-    <td><%= row.tour.days %></td>
-    <td>
+    <td class='cell-middle'><%= row.tour.days %></td>
+    <td class='cell-middle'>
 		<% if row.price %>
-		<%= row.price.price1 %>, <%= row.price.price2 %><br />
-		<%= row.price.price3 %>, <%= row.price.price4 %>
+      <%= number_with_precision row.price.price1, :precision => 2 %>, 
+      <%= number_with_precision row.price.price2, :precision => 2 %><br />
+      <%= number_with_precision row.price.price3, :precision => 2 %>, 
+      <%= number_with_precision row.price.price4, :precision => 2 %>
 		<% else %>
 		[no price]
 		<% end %>
     </td>
-    <td><%= row.departure_date %></td>
-    <td><%#= row.schedule_assignment.tour_guide_id if row.schedule_assignment %></td>
-    <td><%#= row.schedule_assignment.driver_id if row.schedule_assignment %></td>
-    <td><%= row.status %></td>
+    <td class='cell-middle'>
+      <%= row.departure_date %><br />
+      <%= row.return_date %>
+    </td>
+    <td class='cell-middle'><%= row.status %></td>
 </tr>
