--- a/app/views/travel_admin/schedules/index.html.erb
+++ b/app/views/travel_admin/schedules/index.html.erb
@@ -25,9 +25,7 @@
       <th><%= t("tour") %></th>
       <th><%= t("days") %></th>
       <th>Price</th>
-      <th>Departure</th>
-      <th>Tour Guide</th>
-      <th>Driver</th>
+      <th>Departure / Return</th>
       <th>Status</th>
   </tr>
 </thead>
