--- a/app/views/travel_admin/addresses/_row.html.erb
+++ b/app/views/travel_admin/addresses/_row.html.erb
@@ -1,13 +1,12 @@
 <tr id="<%= dom_id row%>">
   <td class='cell-middle'><%= row.id %></td>
-  <td><%= row.address_data_type %><br />
-    <%= row.address_data_id %></td>
+  <td><%= link_to "#{row.address_data_type}: #{row.address_data_id}", edit_object_url(row.address_data), :remote => true %></td>
   <td><%= row.address1 %><br />
     <%= row.address2 %></td>
   <td><%= row.zipcode %></td>
   <td><%= row.city %>
-  <td><%= row.created_at %><br />
-    <%= row.updated_at %></td>
+  <td><%= time_tag row.created_at %><br />
+    <%= time_tag row.updated_at %></td>
   <td class='cell-middle'>
       <%= row_link_to_edit row %>
   </td>
