--- a/app/views/travel_admin/emails/_row.html.erb
+++ b/app/views/travel_admin/emails/_row.html.erb
@@ -1,15 +1,11 @@
 <tr id="<%= dom_id row%>">
   <td class='cell-middle'><%= row.id %></td>
   <td><%= row.email_address %></td>
-  <td><%= row.email_data_type %></td>
-  <td><%= row.email_data_id %></td>
-  <td><%= row.created_at %></td>
-  <td><%= row.updated_at %></td>
+  <td><%= link_to "#{row.email_data_type}: #{row.email_data_id}", edit_object_url(row.email_data), :remote => true %></td>
+  <td><%= time_tag row.created_at %></td>
+  <td><%= time_tag row.updated_at %></td>
   <td class='cell-middle'>
-    <div class='btn-group'>
-      <%= row_link_to_edit row %>
-      <%= icon_link_to 'User', object_url(row.email_data) + '/edit', :remote => true, :icon => 'icon-pencil' %> 
-    </div>
+    <%= row_link_to_edit row %>
   </td>
 </tr>
 
