--- a/app/views/travel_admin/tours/_row_gen.html.erb
+++ b/app/views/travel_admin/tours/_row_gen.html.erb
@@ -9,9 +9,12 @@
           <%= row_gen.description.title_cn %>
         </td>
         <td class='cell-middle'><%= row_gen.tour_setting.weekly %></td>
+        <td class='cell-middle'><%= row_gen.tour_setting.days_in_advance %></td>
         <td class='cell-middle'>
-          <%= row_gen.tour_price.price1 %>, <%= row_gen.tour_price.price2 %><br />
-          <%= row_gen.tour_price.price3 %>, <%= row_gen.tour_price.price4 %>
+          <%= number_with_precision row_gen.tour_price.price1, :precision => 2 %>,
+          <%= number_with_precision row_gen.tour_price.price2, :precision => 2 %><br />
+          <%= number_with_precision row_gen.tour_price.price3, :precision => 2 %>,
+          <%= number_with_precision row_gen.tour_price.price4, :precision => 2 %>
         </td>
         <td>
           <%= row_gen.schedules.maximum(:departure_date) %><br />
