--- a/app/views/travel_admin/user_infos/_form_find.html.erb
+++ b/app/views/travel_admin/user_infos/_form_find.html.erb
@@ -1,19 +1,17 @@
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-  <h3 id="myModalLabel">Find Customer</h3>
+  <h3 id="myModalLabel"><i class='glyphicon-3-0'></i> Find Customer</h3>
 </div>
 <div class="modal-body">
   <div class='toolbar' style='padding:4px;'>
     <div class='input-prepend input-append'>
       <span class='add-on'>Name/Tel/Email</span>
-      <%= text_field_tag :user_find, '', :onkeyup => 'find_user()' %>
-      <%= icon_link_to 'New customer', new_user_info_path, :icon => 'icon-plus', :remote => true, :class => 'btn btn-success' %>
+      <%= text_field_tag :user_find, params[:n], :onkeyup => 'find_user()' %>
+      <%= link_to_new 'New customer', new_user_info_path %>
     </div>
   </div>
   <div class='border-div' style='height:300px;overflow-y:scroll;'>
     <table class="data-list table table-striped table-hover" id="list_result_user_infos">
-      <tbody id='search_result'>
-      </tbody>
     </table>
   </div>
 </div>
