--- a/app/views/travel_admin/user_infos/find.js.erb
+++ b/app/views/travel_admin/user_infos/find.js.erb
@@ -5,4 +5,6 @@ if ($('#search_user_div').length == 0){
 $('#search_user_div')
 	.html("<%= j render(:partial => "form_find") %>")
 	.modal('show');
+ 
+  find_user();
 
