--- a/app/views/travel_admin/user_infos/search_result.html.erb
+++ b/app/views/travel_admin/user_infos/search_result.html.erb
@@ -1,12 +1,8 @@
 <% @collection.each do |d| %>
-  <tr tag='<%= d.user_info_id %>'>
-    <td>
-      <%= d.name %>
-      <div class='text-inf'><%= d.email %></div>
-    </td>
-    <td>
-      <%= d.phone %>
-      <div class='text-success'><%= d.address %></div>
-    </td>
+  <tr tag='<%= d[0] %>'>
+    <td><%= d[0] %></td>
+    <td><%= d[1] %></td>
+    <td><%= d[2] %></td>
+    <td><%= d[3] %></td>
   </tr>
 <% end %>
