login and index

--- a/app/views/layouts/travel_admin/login.html.erb
+++ b/app/views/layouts/travel_admin/login.html.erb
@@ -4,8 +4,8 @@
     <title>admin-<%= @title %></title>
     <%= favicon_link_tag %>
     <meta name='<%= @title %>' content='width=device-width, initial-scale=1.0'>
-    <%= stylesheet_link_tag '/css/bootstrap/css/bootstrap', 'admin/admin' %>
-    <%= javascript_include_tag 'admin/admin', '/css/bootstrap/js/bootstrap.min' %>
+    <%= stylesheet_link_tag '/css/bootstrap/css/bootstrap', '/css/bootstrap/css/datepicker', 'admin/admin', '/css/my_icons/glyphicons', '/css/my_icons/gicons' %>
+    <%= javascript_include_tag 'admin/admin', '/css/bootstrap/js/bootstrap.min', '/css/xheditor/xheditor-1.1.14-zh-cn.min', '/css/bootstrap/js/bootstrap-datepicker' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
