--- a/app/assets/stylesheets/admin/shared/toolbox.css.scss
+++ b/app/assets/stylesheets/admin/shared/toolbox.css.scss
@@ -1,6 +1,5 @@
+#top_place_holder {height:69px; background-color: #c8e0c0;}
 #toolbox{
-  padding-top: 72px;
-  position: relative;
   background-color: #c8e0c0;
 }
 .breadcrumb{
