--- a/app/views/travel_admin/employee_infos/_detail.html.erb
+++ b/app/views/travel_admin/employee_infos/_detail.html.erb
@@ -2,4 +2,7 @@
   <%= render :partial => 'travel_admin/employee_infos/detail_info', :object => detail %>
 </div>
 <br />
-<%= icon_link_to 'Edit', edit_info_employee_info_path(detail), :icon => 'icon-pencil', :remote => true %>
+<div class='btn-group'>
+  <%= icon_link_to 'Edit', edit_employee_info_path(detail), :icon => 'icon-pencil', :remote => true, :class => 'btn btn-success' %>
+<%= icon_link_to 'employ info', edit_info_employee_info_path(detail), :remote => true %>
+</div>
