--- a/app/views/layouts/travel_admin/application.html.erb
+++ b/app/views/layouts/travel_admin/application.html.erb
@@ -31,6 +31,7 @@
         <%= yield :breadcrumbs %>
       </div>
     </div>
+    <div id='top_place_holder'>&nbsp;</div>
     <header class='subhead' id='toolbox'>
     <div class='container'>
       <div class='quick-go'>
