--- a/app/views/travel_admin/employee_infos/_form.html.erb
+++ b/app/views/travel_admin/employee_infos/_form.html.erb
@@ -1,19 +1,21 @@
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+  <h3 id="myModalLabel">Edit Employee info# <%= @object.id %></h3>
+</div>
+<div class="modal-body">
 <%= form_for( @object, :remote => true) do |f| %>
-  <div class="container">
-  	<div class='span-8'>
+  <div class="row">
+  	<div class='span4'>
 	  <%= f.field_container :company_id do %>
-	  	<%= f.label :company_id %><br />
-
+	  	<%= f.label :company_id %>
 			<%= f.select :company_id, Company.all.map { |c| [c.short_name, c.id] }, {}, :class => 'data-field' %>
-
 	  <% end %>
 	  <%= f.field_container :nickname do %>
-	  	<%= f.label :nickname %><br />
+	  	<%= f.label :nickname %>
 	  	<%= f.text_field :nickname %>
 	  <% end %>
     </div>
-    <div class='span-8 last'>
-	  	
+    <div class='span4'>
 	  	Telephones:
       <%= add_object_js_link 'Add', f, :telephones, 'travel_admin/user_infos/form_tel', '#tels'  %>
       <br /> 
@@ -42,8 +44,11 @@
 
     </div>
 	</div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
+</div>
+<div class="modal-footer">
+  <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  <button class="btn btn-primary" onclick='submit_dialog_form(this)'>Save changes</button>
+</div>
+
+
