--- a/app/views/travel_admin/employee_infos/_form_info.html.erb
+++ b/app/views/travel_admin/employee_infos/_form_info.html.erb
@@ -1,32 +1,41 @@
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+  <h3 id="myModalLabel">Edit Employee# <%= @object.id %></h3>
+</div>
+<div class="modal-body">
 <%= form_for( @object, :remote => true) do |f| %>
-  <div class="container">
-  	<div class='span-8'>
+  <div>
+  	<div>
       
 	  <%= f.field_container :ssn do %>
-	  	<%= f.label :ssn %><br />
+	  	<%= f.label :ssn %>
 	  	<%= f.text_field :ssn %>
 	  <% end %>
 	  <%= f.field_container :employ_date do %>
-	  	<%= f.label :employ_date %><br />
-      <%= f.text_field :employ_date, :class => 'date-picker' %>
+	  	<%= f.label :employ_date %>
+      <%= date_text_field(f, :employ_date) %>
 	  <% end %>
 	  <%= f.field_container :birthday do %>
-	  	<%= f.label :birthday %><br />
-      <%= f.text_field :birthday, :class => 'date-picker' %>
+	  	<%= f.label :birthday %>
+      <%= date_text_field(f, :birthday) %>
 	  <% end %>
 
-      Roles<br />
+    Roles: <br />
       <% InputType.get_list('roles').each do |role| %>
-        <%= check_box_tag "role[#{role.type_value}]", 1, @object.roles && @object.roles.include?(role.type_value), {:id => dom_id(role), :onchange => 'roles_changed();'} %>
-        <%= label_tag dom_id(role), role.type_text %>
+        <label class='checkbox inline' style='white-space:nowrap;'>
+          <%= check_box_tag "role[#{role.type_value}]", 1, @object.roles && @object.roles.include?(role.type_value), {:id => dom_id(role), :onchange => 'roles_changed();'} %>
+          <%= role.type_text %>
+        </label>
       <% end %>
     </div>
 	</div>
-
-
   <%= render :partial => 'travel_admin/shared/status', :locals => {:f => f} %> 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
+
+</div>
+<div class="modal-footer">
+  <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  <button class="btn btn-primary" onclick='submit_dialog_form(this)'>Save changes</button>
+</div>
+
 
