--- a/app/views/travel_admin/employee_infos/edit_info.js.erb
+++ b/app/views/travel_admin/employee_infos/edit_info.js.erb
@@ -1,15 +1,11 @@
-var edit_div_id = "edit_employee_info_div";
+var edit_div_id = "edit_<%= @object.class.name.underscore %>_div";
 var edit_div = '#' + edit_div_id;
 
 if ($(edit_div).length == 0){
-  $('#page_main').append("<div id='"+ edit_div_id +"'></div>");
-  $(edit_div).dialog({ autoOpen:false, width:700, dialogClass:'shadow', modal:true});
+  $('#dialog_place_holder').append("<div id='"+ edit_div_id +"' class='modal hide fade' aria-hidden='true'></div>");
 }
 
 $(edit_div)
 	.html("<%= j render(:partial => "form_info") %>")
-	.dialog('option', 'title', 'Edit <%= @object.class.name %> <%= @object.id%>#')
-	.dialog('open');
-$('.html-editor').xheditor({tools: 'Blocktag,Bold,Italic,Underline,|,List,Link,Img,|,Source'});	
-$('input[type=submit]').addClass('button green');
-$('.date-picker').datepicker({ showButtonPanel: true, dateFormat: 'yy-mm-dd' });
+  .modal();
+$('.date-picker').datepicker({ format: 'yyyy-mm-dd' });
