--- a/app/views/travel_admin/shared/_main_menu.html.erb
+++ b/app/views/travel_admin/shared/_main_menu.html.erb
@@ -13,7 +13,7 @@
       <li><%= link_to t(:pages), pages_path %></li>
       <li class='divider'></li>
       <li><%= link_to t(:companies), companies_path %></li>
-      <li><%= link_to 'Employees', emps_path %></li>
+      <li><%= link_to 'Employees', employee_infos_path %></li>
     </ul>
   </li>
   <% if has_auth('process_order') %>
