--- a/app/views/travel_admin/employee_infos/index.html.erb
+++ b/app/views/travel_admin/employee_infos/index.html.erb
@@ -4,50 +4,38 @@
         <li class="active">Employees</li>
       </ul>
 <% end %>
-<%= content_for :search_box do %>
-      <%= form_for( @search, :url => employee_infos_path ) do |f| %>
-      <%= f.select :company_id_eq, Company.all.map { |c| [c.short_name, c.id] }.insert(0, ['All Company', nil]), {}, :class => 'data-field', :onchange => 'this.form.submit()'  %>
-      <%= f.select :status_eq, [['All Status', nil],['active', 1], ['leaved', 0]],{}, :class => 'data-field', :onchange => 'this.form.submit()' %>
-    <div class='input-append'>
-      <%= f.text_field :nickname_contains, :size => 15, :class => 'data-field' %>
-      <%= search_button %>
-      <%= link_to_new 'Add Employee', new_employee_info_path %>
-    </div>
-      <% end %>
-<% end %>
 <section>
-<div class='data-pager'>
-  <%= will_paginate(@collection, :class => 'pagination pagination-mini') %>
-</div>
+<ul class="nav nav-tabs" id='list_emps'>
+  <% @ecs.each do |e| %>
+    <li <%= "class=active" if e.company_id == @cid %>>
+      <a href="employee_infos?c=<%= e.company_id %>"><%= e.company ? e.company.short_name : '(empty)' %>:<%= e.count %>p</a>
+    </li>
+  <% end %>
+</ul>
+<% if @employee_infos %>
 <table class="data-list table table-bordered table-striped" id="list_employee_infos">
   <thead>
   <tr class='table-header'>
       <th><%= t("id") %></th>
-      <th><%= t("Company") %></th>
       <th><%= t("name") %></th>
       <th><%= t("roles") %></th>
       <th><%= t('telephone')%></th>
       <th><%= t('email') %></th>
-      <th><%= t('status') %></th>
-      <th>op</th>
   </tr>
   </thead>
   <tbody>
-<% @collection.each do |e| %>
-  <%= render :partial => 'row', :object => e %>
+<% @employee_infos.each do |row| %>
+  <% tt = TypeText.instance %>
+  <tr id="<%= dom_id row %>" <%= 'class=deleted' unless row.status && row.status == 1 %>>
+      <td><%= row.id %></td>
+      <td><%= row.nickname %></td>
+      <td><%= tt.get_texts('roles', row.roles) %></td>
+      <td><%= row.default_telephone %></td>
+      <td><%= row.default_email %></td>
+  </tr>
 <% end %>
   </tbody>
 </table>
-<div class='data-pager'>
-  <%= will_paginate(@collection, :class => 'pagination pagination-mini') %>
-</div>
-
-<ul class="nav nav-tabs">
-  <li class="active">
-    <a href="/home">Home</a>
-  </li>
-  <li><a href="#">...</a></li>
-  <li><a href="#">...</a></li>
-</ul>
-
-
+  
+<% end %>
+</section>
