--- a/app/views/travel_admin/employee_infos/_detail.html.erb
+++ b/app/views/travel_admin/employee_infos/_detail.html.erb
@@ -4,5 +4,6 @@
 <br />
 <div class='btn-group'>
   <%= icon_link_to 'Edit', edit_employee_info_path(detail), :icon => 'icon-pencil', :remote => true, :class => 'btn btn-success' %>
-<%= icon_link_to 'employ info', edit_info_employee_info_path(detail), :remote => true %>
+  <%= icon_link_to 'employ info', edit_info_employee_info_path(detail), :remote => true, :icon => 'icon-list-alt' %>
+  <%= icon_link_to 'Reset password', edit_employee_path(detail.employee), :remote => true, :icon => 'icon-lock' if detail.employee %>
 </div>
