--- a/app/views/travel_admin/resource/create.js.erb
+++ b/app/views/travel_admin/resource/create.js.erb
@@ -1,5 +1,5 @@
 <% if flash[:error] %>
-  alert("<%= flash[:error] %>");
+  alert("<%=raw flash[:error] %>");
   <% flash.discard %>
 <% else %>
 <%
