--- a/app/views/travel_admin/employee_infos/_form.html.erb
+++ b/app/views/travel_admin/employee_infos/_form.html.erb
@@ -11,7 +11,7 @@
 			<%= f.select :company_id, Company.all.map { |c| [c.short_name, c.id] }, {}, :class => 'data-field' %>
 	  <% end %>
 	  <%= f.field_container :nickname do %>
-	  	<%= f.label :nickname %>
+	  	Employee name
 	  	<%= f.text_field :nickname %>
 	  <% end %>
     </div>
