--- a/app/views/travel_admin/employees/_form.html.erb
+++ b/app/views/travel_admin/employees/_form.html.erb
@@ -1,38 +1,26 @@
-<%= form_for( @object, :url => post_path, :remote => true) do |f| %>
-  <div class="yui-g">
-  	<div class='yui-u first'>
-	  <%= f.field_container :agent_id do %>
-	  	<%= f.label :agent_id %><br />
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+  <h3 id="myModalLabel">Employee's Login </h3>
+</div>
+<div class="modal-body">
+<%= form_for( [@employee_info, @object], :remote => true) do |f| %>
+  <%= f.label :login_name %>
+  <%= f.text_field :login_name %><br />
 
-			<%= f.select :agent_id, Agent.all.map { |c| [c.short_name, c.id] }, {}, :class => 'data-field' %>
+  <%= f.label :email, 'Email (for retrive password)' %>
+  <%= f.text_field :email %><br />
 
-	  <% end %>
-	  <%= f.field_container :nickname do %>
-	  	<%= f.label :nickname %><br />
-	  	<%= f.text_field :nickname %>
-	  <% end %>
-	  <%= f.field_container :employ_date do %>
-	  	<%= f.label :employ_date %><br />
-	  	<%= f.text_field :employ_date %>
-	  <% end %>
-	  </div>
-	  <div class='yui-u'>
-	  <%= f.field_container :ssn do %>
-	  	<%= f.label :ssn %><br />
-	  	<%= f.text_field :ssn %>
-	  <% end %>
-	  <%= f.field_container :birthday do %>
-	  	<%= f.label :birthday %><br />
-	  	<%= f.text_field :birthday %>
-	  <% end %>
-	  <%= f.field_container :locked_at do %>
-	  	<%= f.label :locked_at %><br />
-	  	<%= f.text_field :locked_at %>
-	  <% end %>
-	 	</div>
-	</div>
+  <%= f.label :password %>
+  <%= f.password_field :password %><br />
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+
 <% end %>
+</div>
+<div class="modal-footer">
+  <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  <button class="btn btn-primary" onclick='submit_dialog_form(this)'>Save</button>
+</div>
+
+
